--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Portifolio</title>
   <meta name="description" content="Desenvolvedor Front End & UX/UI Designer, Localizado no Ceará">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="icon" href="img/favicon.svg" type="image/svg+xml">
 </head>
 
 <body>
