--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portifolio</title>
   <meta name="description" content="Desenvolvedor Front End & UX/UI Designer, Localizado no Ceará">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/style.min.css">
   <link rel="icon" href="img/favicon.svg" type="image/svg+xml">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rasa:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
   <header class="header">
-    <img src="img/marca.svg" alt="Lobo" width="104" height="38">
+    <img src="img/marca-af.svg" alt="Lobo" width="250" height="150">
     <nav>
       <ul class="header-menu">
         <li><a href="#experiencia">Experiência</a></li>
