alguns estilos modificados, responsividade atualizada.

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <li>+55 88 9999-9999</li>
         <li><a href="#">@instagram</a></li>
       </ul>
-      <p class="footer-copy">Lobo. Alguns diretos reservados.</p>
+      <p class="footer-copy">Antonio Filho. Alguns diretos reservados.</p>
     </div>
   </footer>
 </body>
